<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ui_bg_style"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="40dip"
            android:paddingRight="40dip">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dip"
                android:src="@drawable/rongketonglogo"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rkcloud_userandpass_bg"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:paddingLeft="22px"
                android:paddingRight="22px">

            <com.rongkecloud.chat.demo.ui.widget.RKCloudChatSearchEditText
                    android:id="@+id/login_name_edittext"
                    style="@style/login_edittext_style"
                    android:drawableLeft="@drawable/icon_person"
                    android:hint="@string/login_name_text"
                    android:inputType="textVisiblePassword"
                    android:maxLength="20"
                    android:singleLine="true"/>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/text_Color_Hint"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="22px"
            />

            <com.rongkecloud.chat.demo.ui.widget.RKCloudChatSearchEditText
                    android:id="@+id/login_pwd_edittext"
                    style="@style/login_edittext_style"
                    android:layout_marginTop="10dip"
                    android:drawableLeft="@drawable/icon_lock"
                    android:hint="@string/login_pwd_text"
                    android:maxLength="20"
                    android:password="true"
                    android:singleLine="true"/>
        </LinearLayout>

        <Button
                android:id="@+id/login"
                style="@style/btn_login_style"
                android:layout_marginTop="25dip"
                android:text="@string/login"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_normal_btn"
                android:textColor="#51c1f2"
                android:layout_marginTop="20dip"
                android:textSize="16sp"
                android:text="@string/register_btn"
                android:layout_gravity="center"
        />
    </LinearLayout>

</ScrollView>