<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/rkcloud_chat_ui_bg_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/rkcloud_chat_title_layout" />
    <View
            style="@style/divider_line_style"
    />
    <!-- 分隔线 -->

    <include layout="@layout/rkcloud_chat_setting_dividezone" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 通知栏提示 -->

            <LinearLayout style="@style/rkcloud_chat_setting_item_style" >

                <TextView
                    style="@style/rkcloud_chat_setting_item_tip_style"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/chatdemo_setting_mms_notify_notificationbar" />

                <ImageView
                    android:id="@+id/notify_bar"
                    style="@style/rkcloud_chat_setting_item_switch_style"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <!-- 消息详情 -->

            <LinearLayout
                    android:id="@+id/notify_content_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                <!-- 两个条目间的分隔线 -->

                <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/rkcloud_chat_listview_item_normal_bgcolor"
                        android:clickable="false"
                        android:paddingLeft="@dimen/rkcloud_chat_setting_item_marginleft" >

                    <ImageView style="@style/rkcloud_chat_listview_divide_style" />
                </RelativeLayout>

                <LinearLayout style="@style/rkcloud_chat_setting_item_style" >

                    <TextView
                            style="@style/rkcloud_chat_setting_item_tip_style"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/chatdemo_setting_mms_notify_content" />

                    <ImageView
                            android:id="@+id/notify_content"
                            style="@style/rkcloud_chat_setting_item_switch_style"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent" />
                </LinearLayout>
            </LinearLayout>

            <!-- 声音 -->

            <LinearLayout
                android:id="@+id/notify_sound_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- 两个条目间的分隔线 -->

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/rkcloud_chat_listview_item_normal_bgcolor"
                    android:clickable="false"
                    android:paddingLeft="@dimen/rkcloud_chat_setting_item_marginleft" >

                    <ImageView style="@style/rkcloud_chat_listview_divide_style" />
                </RelativeLayout>

                <LinearLayout style="@style/rkcloud_chat_setting_item_style" >

                    <TextView
                        style="@style/rkcloud_chat_setting_item_tip_style"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/chatdemo_setting_mms_notify_sound" />

                    <ImageView
                        android:id="@+id/notify_sound"
                        style="@style/rkcloud_chat_setting_item_switch_style"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notify_vibration_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- 两个条目间的分隔线 -->

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/rkcloud_chat_listview_item_normal_bgcolor"
                    android:clickable="false"
                    android:paddingLeft="@dimen/rkcloud_chat_setting_item_marginleft" >

                    <ImageView style="@style/rkcloud_chat_listview_divide_style" />
                </RelativeLayout>

                <!-- 震动 -->

                <LinearLayout style="@style/rkcloud_chat_setting_item_style" >

                    <TextView
                        style="@style/rkcloud_chat_setting_item_tip_style"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/chatdemo_setting_mms_vibration" />

                    <ImageView
                        android:id="@+id/notify_vibration"
                        style="@style/rkcloud_chat_setting_item_switch_style"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />
                </LinearLayout>
            </LinearLayout>

            <!-- 两个条目间的分隔线 -->

            <RelativeLayout
                android:id="@+id/layout_diver"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/rkcloud_chat_listview_item_normal_bgcolor"
                android:clickable="true"
                android:paddingLeft="@dimen/rkcloud_chat_setting_item_marginleft" >

                <ImageView style="@style/rkcloud_chat_listview_divide_style" />
            </RelativeLayout>

            <!-- 新消息提示音 -->

            <LinearLayout
                android:id="@+id/layout_selectsound"
                style="@style/rkcloud_chat_setting_item_style" >

                <TextView
                    style="@style/rkcloud_chat_setting_item_tip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/chatdemo_setting_mms_notify_sound_music" />

                <TextView
                    android:id="@+id/soundname"
                    style="@style/rkcloud_chat_setting_item_content_witharrow_style"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>